# tacchien

./: .gitignore  README.md  license.txt  pyproject.toml  tacchien-build-brief.md
docs/: runbook.md  tacchien-blueprint.md
scripts/: validate_shipped_docs.py  verify_all.sh
tacchien/: hooks.py  install.py  modules.txt  patches.txt
tacchien/api/: _guard.py  baocao.py  bophan.py  domain.py  giamsat.py  overview.py  signals.py
tacchien/config/: desktop.py
tacchien/fixtures/: role.json  tc_domain.json  tc_rule.json
tacchien/patches/: backfill_signal_pillar.py
tacchien/public/tc/: shell.css  shell.js
tacchien/public/tc/components/: banner.js  bottom-nav.js  header.js  toast.js
tacchien/public/tc/lib/: api.js  dom.js  format.js  realtime.js  router.js  widgets.js
tacchien/public/tc/views/: baocao.js  bophan.js  domain.js  giamsat.js  hanhdong.js  overview.js  signals.js
tacchien/tacchien/doctype/tc_channel_map/: tc_channel_map.json  tc_channel_map.py
tacchien/tacchien/doctype/tc_domain/: tc_domain.json  tc_domain.py
tacchien/tacchien/doctype/tc_obligation/: tc_obligation.json  tc_obligation.py
tacchien/tacchien/doctype/tc_rule/: tc_rule.json  (+1 more)
tacchien/tc/: channels.py  dispatcher.py  emit.py
tacchien/tc/notify/: base.py  digest.py  telegram.py
tacchien/tc/rules/: _util.py  finance.py  flow.py  inventory.py  obligation.py  pos.py  purchase.py  sales.py  security.py  system.py
tacchien/tests/: test_emit_signal.py  test_rules.py  test_signals_api.py
tacchien/www/: tc.html  tc.py
tests/browser/: README.md  drive.mjs  index.html  server.mjs
(+6 files in other folders)
