[project]
name = "tacchien"
authors = [{ name = "RVHG", email = "it@rvhg.local" }]
description = "Màn hình tác chiến RVHG — signal war room trên Frappe/ERPNext v16"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "tacchien"
